--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
           <h1>FlexTurismos</h1>
         </div>
         <ul class="list-items">
-          <li><a href="#quem-somos">Quem Somos</a></li>
-          <li><a href="#servicos">Serviços</a></li>
-          <li><a href="#planos">Planos</a></li>
+          <li class="item"><a href="#quem-somos">Quem Somos</a></li>
+          <li class="item"><a href="#servicos">Serviços</a></li>
+          <li class="item"><a href="#planos">Planos</a></li>
         </ul>
       </div>
     </header>
 
-    <div>
-      <div>
+    <div class="flex-container presentation">
+      <div class="intro-text">
         <h1>Flex <br />Turismos</h1>
         <p>O melhor serviço para você!</p>
         <a href="">Saiba Mais!</a>
@@ -34,11 +34,7 @@
       </div>
     </div>
 
-    <div>
-      <div>
-        <img src="./images/1-quem-somos.png" alt="balcão de atendimento" />
-      </div>
-
+    <div class="flex-container" id="quem-somos">
       <div>
         <h2>Quem somos</h2>
         <p>
@@ -50,6 +46,9 @@
           distribution of letters, as opposed to using 'Content here, content
           here', making it look like readable English.
         </p>
+      </div>
+      <div>
+        <img src="./images/1-quem-somos.png" alt="balcão de atendimento" />
       </div>
     </div>
 
