--- a/index.html
+++ b/index.html
@@ -52,30 +52,32 @@
       </div>
     </div>
 
-    <div>
-      <div>
-        <h2>Serviços</h2>
-      </div>
-
-      <div>
+    <div class="container-extern">
+      <div class="flex-container" id="services">
         <div>
-          <div><img src="./images/icon-2.png" alt="hospedagens" /></div>
-          <p>Hospedagens</p>
-          <a href="#">Comprar Agora</a>
+          <h2>Serviços</h2>
         </div>
 
-        <div>
-          <div><img src="./images/icon-1.png" alt="pacote de viagens" /></div>
-          <p>Pacotes de viagens</p>
-          <a href="#">Comprar Agora</a>
-        </div>
-
-        <div>
-          <div>
-            <img src="./images/icon-3.png" alt="roteiros personalizados" />
+        <div class="list-of-services">
+          <div class="item-services">
+            <div><img src="./images/icon-2.png" alt="hospedagens" /></div>
+            <p>Hospedagens</p>
+            <a href="#">Comprar Agora</a>
           </div>
-          <p>Roteiros personalizados</p>
-          <a href="#">Comprar Agora</a>
+
+          <div class="item-services">
+            <div><img src="./images/icon-1.png" alt="pacote de viagens" /></div>
+            <p>Pacotes de viagens</p>
+            <a href="#">Comprar Agora</a>
+          </div>
+
+          <div class="item-services">
+            <div>
+              <img src="./images/icon-3.png" alt="roteiros personalizados" />
+            </div>
+            <p>Roteiros personalizados</p>
+            <a href="#">Comprar Agora</a>
+          </div>
         </div>
       </div>
     </div>
