--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="intro-text">
         <h1>Flex <br />Turismos</h1>
         <p>O melhor serviço para você!</p>
-        <a href="">Saiba Mais!</a>
+        <a href="" class="btn">Saiba Mais!</a>
       </div>
 
       <div>
@@ -82,40 +82,45 @@
       </div>
     </div>
 
-    <div>
+    <div class="flex-container" id="planos">
       <div>
-        <h3>Plano 2</h3>
-        <ul>
-          <li>Suporte 24h</li>
-          <li>Serviços de quarto</li>
-          <li>Guia turístico</li>
-        </ul>
-        <a href="#">Saiba Mais!</a>
+        <h2 class="tittle-plan">Planos</h2>
       </div>
+      <div class="list-planos">
+        <div class="item-plano">
+          <h3>Plano 2</h3>
+          <ul class="lista">
+            <li>Suporte 24h</li>
+            <li>Serviços de quarto</li>
+            <li>Guia turístico</li>
+          </ul>
+          <a href="#" class="btn">Saiba Mais!</a>
+        </div>
 
-      <div>
-        <h3>Plano 2</h3>
-        <ul>
-          <li>Suporte 24h</li>
-          <li>Serviços de quarto</li>
-          <li>Guia turístico</li>
-          <li>Roteiro de trilhas</li>
-          <li>Serviço personalizado</li>
-        </ul>
-        <a href="#">Saiba Mais!</a>
-      </div>
+        <div class="item-plano">
+          <h3>Plano 2</h3>
+          <ul class="lista">
+            <li>Suporte 24h</li>
+            <li>Serviços de quarto</li>
+            <li>Guia turístico</li>
+            <li>Roteiro de trilhas</li>
+            <li>Serviço personalizado</li>
+          </ul>
+          <a href="#" class="btn">Saiba Mais!</a>
+        </div>
 
-      <div>
-        <h3>Plano 3</h3>
-        <ul>
-          <li>Suporte 24h</li>
-          <li>Serviços de quarto</li>
-          <li>Guia turístico</li>
-          <li>Roteiro de trilhas</li>
-          <li>Serviço personalizado</li>
-          <li>Área Vip</li>
-        </ul>
-        <a href="#">Saiba Mais!</a>
+        <div class="item-plano">
+          <h3>Plano 3</h3>
+          <ul class="lista">
+            <li>Suporte 24h</li>
+            <li>Serviços de quarto</li>
+            <li>Guia turístico</li>
+            <li>Roteiro de trilhas</li>
+            <li>Serviço personalizado</li>
+            <li>Área Vip</li>
+          </ul>
+          <a href="#" class="btn">Saiba Mais!</a>
+        </div>
       </div>
     </div>
 
