--- a/index.html
+++ b/index.html
@@ -8,88 +8,67 @@
   </head>
   <body>
     <header>
-      <div class="flex-container menu">
-        <div>
-          <h1>FlexTurismos</h1>
-        </div>
-        <ul class="list-items">
-          <li class="item"><a href="#quem-somos">Quem Somos</a></li>
-          <li class="item"><a href="#servicos">Serviços</a></li>
-          <li class="item"><a href="#planos">Planos</a></li>
-        </ul>
-      </div>
+      <h1 class="menu">FlexTurismos</h1>
+      <ul class="list-items">
+        <li class="item"><a href="#quem-somos">Quem Somos</a></li>
+        <li class="item"><a href="#services">Serviços</a></li>
+        <li class="item"><a href="#planos">Planos</a></li>
+      </ul>
     </header>
-
-    <div class="flex-container presentation">
-      <div class="intro-text">
-        <h1>Flex <br />Turismos</h1>
+    <section class="flex-container intro-text">
+      <div class="apresentacao">
+        <h1>FlexTurismos</h1>
         <p>O melhor serviço para você!</p>
         <a href="" class="btn">Saiba Mais!</a>
       </div>
+      <img src="./images/0-main.png" alt="banner de apresentação" />
+    </section>
 
-      <div>
-        <div>
-          <img src="./images/0-main.png" alt="banner de apresentação" />
-        </div>
-      </div>
-    </div>
-
-    <div class="flex-container" id="quem-somos">
+    <section class="flex-container" id="quem-somos">
       <div>
         <h2>Quem somos</h2>
-        <p>
+        <p class="text">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout.
         </p>
-        <p>
+        <p class="text">
           The point of using Lorem Ipsum is that it has a more-or-less normal
           distribution of letters, as opposed to using 'Content here, content
           here', making it look like readable English.
         </p>
       </div>
-      <div>
-        <img src="./images/1-quem-somos.png" alt="balcão de atendimento" />
-      </div>
-    </div>
+      <img src="./images/1-quem-somos.png" alt="balcão de atendimento" />
+    </section>
 
-    <div class="container-extern">
-      <div class="flex-container" id="services">
-        <div>
-          <h2>Serviços</h2>
+    <section class="services-section" id="services">
+      <h2>Serviços</h2>
+      <div class="list-of-services">
+        <div class="item-services">
+          <img src="./images/icon-2.png" alt="hospedagens" />
+          <p>Hospedagens</p>
+          <a href="#">Comprar Agora</a>
         </div>
 
-        <div class="list-of-services">
-          <div class="item-services">
-            <div><img src="./images/icon-2.png" alt="hospedagens" /></div>
-            <p>Hospedagens</p>
-            <a href="#">Comprar Agora</a>
-          </div>
+        <div class="item-services">
+          <img src="./images/icon-1.png" alt="pacote de viagens" />
+          <p>Pacotes de viagens</p>
+          <a href="#">Comprar Agora</a>
+        </div>
 
-          <div class="item-services">
-            <div><img src="./images/icon-1.png" alt="pacote de viagens" /></div>
-            <p>Pacotes de viagens</p>
-            <a href="#">Comprar Agora</a>
-          </div>
-
-          <div class="item-services">
-            <div>
-              <img src="./images/icon-3.png" alt="roteiros personalizados" />
-            </div>
-            <p>Roteiros personalizados</p>
-            <a href="#">Comprar Agora</a>
-          </div>
+        <div class="item-services">
+          <img src="./images/icon-3.png" alt="roteiros personalizados" />
+          <p>Roteiros personalizados</p>
+          <a href="#">Comprar Agora</a>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="flex-container" id="planos">
-      <div>
-        <h2 class="tittle-plan">Planos</h2>
-      </div>
+    <section class="flex-container" id="planos">
+      <h2>Planos</h2>
       <div class="list-planos">
         <div class="item-plano">
           <h3>Plano 2</h3>
-          <ul class="lista">
+          <ul>
             <li>Suporte 24h</li>
             <li>Serviços de quarto</li>
             <li>Guia turístico</li>
@@ -99,19 +78,20 @@
 
         <div class="item-plano">
           <h3>Plano 2</h3>
-          <ul class="lista">
+          <br />
+          <ul>
             <li>Suporte 24h</li>
             <li>Serviços de quarto</li>
             <li>Guia turístico</li>
             <li>Roteiro de trilhas</li>
-            <li>Serviço personalizado</li>
           </ul>
           <a href="#" class="btn">Saiba Mais!</a>
         </div>
 
         <div class="item-plano">
           <h3>Plano 3</h3>
-          <ul class="lista">
+          <br />
+          <ul>
             <li>Suporte 24h</li>
             <li>Serviços de quarto</li>
             <li>Guia turístico</li>
@@ -122,11 +102,13 @@
           <a href="#" class="btn">Saiba Mais!</a>
         </div>
       </div>
-    </div>
+    </section>
 
     <footer>
-      <p>&copy; 2021 CSS Flexbox</p>
-      <p>Desenvolvido por: Seu nome aqui dev</p>
+      <div class="flex-container footer">
+        <p>&copy; 2021 CSS Flexbox</p>
+        <p>Desenvolvido por: Pâmela Leles</p>
+      </div>
     </footer>
   </body>
 </html>
