--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <header>
       <h1 class="menu">FlexTurismos</h1>
       <ul class="list-items">
-        <li class="item"><a href="#quem-somos">Quem Somos</a></li>
+        <li class="item"><a href="#about-us">Quem Somos</a></li>
         <li class="item"><a href="#services">Serviços</a></li>
-        <li class="item"><a href="#planos">Planos</a></li>
+        <li class="item"><a href="#plans">plans</a></li>
       </ul>
     </header>
     <section class="flex-container intro-text">
-      <div class="apresentacao">
+      <div class="presentation">
         <h1>FlexTurismos</h1>
         <p>O melhor serviço para você!</p>
         <a href="" class="btn">Saiba Mais!</a>
@@ -24,7 +24,7 @@
       <img src="./images/0-main.png" alt="banner de apresentação" />
     </section>
 
-    <section class="flex-container" id="quem-somos">
+    <section class="flex-container" id="about-us">
       <div>
         <h2>Quem somos</h2>
         <p class="text">
@@ -63,11 +63,11 @@
       </div>
     </section>
 
-    <section class="flex-container" id="planos">
-      <h2>Planos</h2>
-      <div class="list-planos">
-        <div class="item-plano">
-          <h3>Plano 2</h3>
+    <section class="flex-container" id="plans">
+      <h2>planos</h2>
+      <div class="list-plans">
+        <div class="plans-item">
+          <h3>Plano 1</h3>
           <ul>
             <li>Suporte 24h</li>
             <li>Serviços de quarto</li>
@@ -76,7 +76,7 @@
           <a href="#" class="btn">Saiba Mais!</a>
         </div>
 
-        <div class="item-plano">
+        <div class="plans-item">
           <h3>Plano 2</h3>
           <br />
           <ul>
@@ -88,7 +88,7 @@
           <a href="#" class="btn">Saiba Mais!</a>
         </div>
 
-        <div class="item-plano">
+        <div class="plans-item">
           <h3>Plano 3</h3>
           <br />
           <ul>
